# wasm-curse-words

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: publish.yml
src/: lib.rs  tests.rs
src/curseDictionaries/: filter_profanity_german.txt  filter_profanity_russian.txt
src/wasm_curse/: mod.rs  utils.rs
src/wasm_curse/statics/: mod.rs
