[package]
name = "wasm-curse-words"
version = "1.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustrict = "0.7.24"
wasm-bindgen = "0.2.92"
lingua = { version = "1.6.2", default-features = false, features = [
    "english",
    "russian",
    "german",
    "polish",
] }
regex = "1.6.2"
phf = { version = "0.11.2", features = ["macros"] }
