[package]
name = "wasm-curse-words"
version = "1.3.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
rustrict = "0.7.25"
wasm-bindgen = "0.2.92"
lingua = { version = "1.8.0", default-features = false, features = [
    "english",
    "russian",
    "german",
    "polish",
] }
regex = "1.10.4"
phf = { version = "0.11.2", features = ["macros"] }
once_cell = "1.19"
